@@ -1027,7 +1027,7 @@ Exread(Export *fs, Fcall *t, Fcall *r)
 	Fid *f;
 	Chan *c;
 	Lock *cl;
-	long off;
+	vlong off;
 	int dir, n, seek;
 
 	f = Exgetfid(fs, t->fid);
